part1/e12_e13/manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex13-backend-svc
spec:
  type: ClusterIP
  selector:
    app: ex13-backend
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ex13-frontend-svc
spec:
  type: ClusterIP
  selector:
    app: ex13-frontend
  ports:
  - port: 2346
    protocol: TCP
    targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ex13-ingress
  annotations:
    traefik.ingress.kubernetes.io/rule-type: "PathPrefixStrip"
spec:
  rules:
  - http:
      paths:
      - path: /api
        backend:
          serviceName: ex13-backend-svc
          servicePort: 2345
      - path: /
        backend:
          serviceName: ex13-frontend-svc
          servicePort: 2346
